--- a/templates/index.html
+++ b/templates/index.html
@@ -511,7 +511,10 @@
                                 <button type="button" class="pixel-btn" data-symbol="BNB">BNB</button>
                                 <button type="button" class="pixel-btn" data-symbol="XRP">XRP</button>
                                 <button type="button" class="pixel-btn" data-symbol="DOGE">DOGE</button>
-                                <button type="button" class="pixel-btn" data-symbol="TRUMP">TRUMP</button>
+                                <button type="button" class="pixel-btn" data-symbol="LINK">LINK</button>
+                                <button type="button" class="pixel-btn" data-symbol="SUI">SUI</button>
+                                <button type="button" class="pixel-btn" data-symbol="LTC">LTC</button>
+                                <button type="button" class="pixel-btn" data-symbol="UNI">UNI</button>                              
                             </div>
                         </div>
                         
