--- a/templates/partials/styles.html
+++ b/templates/partials/styles.html
@@ -541,6 +541,14 @@
         color: #00FFFF;
     }
     
+    .trend-neutral-up {
+        color: #00FFAA;
+    }
+    
+    .trend-neutral-down {
+        color: #00AAFF;
+    }
+    
     .trend-green-down {
         color: #32CD32;
     }
