add shit price alert

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,8 +17,7 @@
         
         <div class="main-content">
             {% include 'partials/indicator.html' %}
-            {% include 'partials/sniper.html' %}
-            {% include 'partials/aiagent.html' %}
+            {% include 'partials/price_alert.html' %}
         </div>
         
         {% include 'partials/footer.html' %}
