--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -6,8 +6,7 @@
         </div>
         <div class="nav-menu">
             <a href="#indicator" class="nav-item active" data-page="indicator">指标线图</a>
-            <a href="#sniper" class="nav-item" data-page="sniper">Sniper</a>
-            <a href="#aiagent" class="nav-item" data-page="aiagent">AI Agent</a>
+            <a href="#price_alert" class="nav-item" data-page="price_alert">币价变动提醒</a>
         </div>
     </div>
 </div> 
