update ma lines

--- a/templates/partials/indicator.html
+++ b/templates/partials/indicator.html
@@ -88,6 +88,37 @@
                         </span>
                         <span class="data-value" id="current-price">--</span>
                     </div>
+                    <!-- 添加MA线的价格显示 -->
+                    <div class="data-row">
+                        <span class="data-label">
+                            <span class="ma-label" style="color: #FFFF00;">上涨黄线(MA4)</span>
+                        </span>
+                        <span class="data-value" id="ma4-price">--</span>
+                    </div>
+                    <div class="data-row">
+                        <span class="data-label">
+                            <span class="ma-label" style="color: #32CD32;">上涨绿线(MA3)</span>
+                        </span>
+                        <span class="data-value" id="ma3-price">--</span>
+                    </div>
+                    <div class="data-row">
+                        <span class="data-label">
+                            <span class="ma-label" style="color: #808080;">MA趋势线(MA2)</span>
+                        </span>
+                        <span class="data-value" id="ma2-price">--</span>
+                    </div>
+                    <div class="data-row">
+                        <span class="data-label">
+                            <span class="ma-label" style="color: #32CD32;">底部绿线(MA5)</span>
+                        </span>
+                        <span class="data-value" id="ma5-price">--</span>
+                    </div>
+                    <div class="data-row">
+                        <span class="data-label">
+                            <span class="ma-label" style="color: #4169E1;">底部蓝线(MA6)</span>
+                        </span>
+                        <span class="data-value" id="ma6-price">--</span>
+                    </div>
                     <div class="data-row">
                         <span class="data-label">
                             市场趋势
